--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,148 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 2rem;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
+.nav-icons {
+  display: flex;
+  gap: 1rem;
   text-decoration: none;
+  height: 14vh;
+  align-items: center;
+  padding: 5px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.icons {
+  text-decoration: none;
+  color: black;
+}
+
+.blog-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 1rem;
+}
+
+.blog-main-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 4%;
+}
+
+.input {
+  width: 58%;
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+}
+
+.blog {
+  outline: none;
+}
+
+.publish {
+  margin-top: 6px;
+}
+.nav-main-container {
+  display: flex;
+  width: 70%;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+/* ------ Home page --------- */
+
+.home-container {
+  max-width: 43rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.home-container header h1 {
+  margin: 2px;
+  padding: 2px;
+  font-weight: bold;
+}
+
+.article {
+  padding: 2px;
+  height: auto;
+}
+
+.article p {
+  margin-top: 10px;
+}
+
+.projects-container {
+  height: auto;
+}
+.projects-container header {
+  margin-top: 12px;
+  font-weight: bold;
+}
+.projects-sub-container {
+  display: flex;
+  gap: 2rem;
+  padding: 4px;
+  flex-direction: column;
+}
+
+.projects-sub-container div {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.projects-sub-container div a {
+  color: black;
+  text-decoration: underline;
+}
+.user-blogs-container {
+  margin: 4px;
+  display: flex;
+  flex-direction: column;
+}
+
+.user-blogs-container p {
+  padding: 2px;
+  text-decoration: underline;
+  margin-top: 0.5rem;
+}
+.user-blogs-sub-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.my-profile-icons img {
+  width: 22px;
+}
+.my-profile-icons {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.myprofile-container {
+  margin-top: 0.5rem;
+  display: flex;
+  justify-content: space-between;
 }
