--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* background-color: rgb(245 239 226); */
+  background-color: rgb(245 239 226);
 }
 
 .container {
