--- a/styles/globals.css
+++ b/styles/globals.css
@@ -223,6 +223,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  /* background-color: #abcae9; */
 }
 
 .comment-container .comment {
@@ -242,7 +243,7 @@
   position: fixed;
   width: 20%;
   height: 120vh;
-  /* background-color: #abcae9; */
+  background-color: #abcae9;
   top: 80px;
   overflow: auto;
   left: -100%;
