--- a/styles/globals.css
+++ b/styles/globals.css
@@ -204,6 +204,7 @@
 .image-wrapper img {
   width: 800px !important;
   height: 600px !important;
+  object-fit: contain;
 }
 
 .post-icons {
@@ -413,6 +414,7 @@
   .image-wrapper img {
     width: 855px !important;
     height: 221px !important;
+    object-fit: cover;
   }
   .post-title h2 {
     margin: 0px;
