--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: #121b22;
+  color: gray !important;
 }
 
 .container {
@@ -245,7 +247,7 @@
   position: fixed;
   width: 20%;
   height: 120vh;
-  background-color: #abcae9;
+  background-color: #121b22;
   top: 80px;
   overflow: auto;
   left: -100%;
