added new styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -239,7 +239,7 @@
   padding: 5px;
   margin-top: 2px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 1rem;
 }
 
@@ -296,7 +296,7 @@
 
 .imgparent {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 0.5rem;
   flex-wrap: wrap;
   border: 1px solid;
